[package]
name = "rtoken-rate"
version = "0.4.0"
authors = ["Promethium Chain 2020"]
edition = "2018"


[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
serde = { version = "1.0.102", optional = true }

# primitives
sp-std = { version = "2.0.1", default-features = false }
sp-runtime = { version = "2.0.1", default-features = false }
sp-core = { version = "2.0.1", default-features = false }
sp-arithmetic = { version = "2.0.1", default-features = false }

# frame dependencies
frame-support = { version = "2.0.1", default-features = false }
frame-system = { version = "2.0.1", default-features = false }
pallet-balances = { version = "2.0.1", default-features = false }
pallet-staking = { version = "2.0.1", default-features = false }

node-primitives = { path = "../../../primitives", default-features = false }

[features]
default = ["std"]
std = [
  "codec/std",
  "serde",
  "sp-std/std",
  "sp-runtime/std",
  "sp-core/std",
  "sp-arithmetic/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-balances/std",
  "pallet-staking/std",
]
