[package]
name = "rfis"
version = "0.4.0"
authors = ["Promethium Chain 2020"]
edition = "2018"


[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
serde = { version = "1.0.102", optional = true }

# primitives
sp-std = { branch = "2.0.1", default-features = false }
sp-runtime = { branch = "2.0.1", default-features = false }
sp-core = { branch = "2.0.1", default-features = false }
sp-io = { branch = "2.0.1", default-features = false }

# frame dependencies
frame-support = { branch = "2.0.1", default-features = false }
frame-system = { branch = "2.0.1", default-features = false }
pallet-balances = { branch = "2.0.1", default-features = false }
pallet-staking = { branch = "2.0.1", default-features = false }
pallet-session = { branch = "2.0.1", default-features = false }

node-primitives = { path = "../../../primitives", default-features = false }
rtoken-balances = { path = "../balances", default-features = false}
rtoken-rate = { path = "../rate", default-features = false}

[features]
default = ["std"]
std = [
  "codec/std",
  "serde",
  "sp-std/std",
  "sp-runtime/std",
  "sp-core/std",
  "sp-io/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-balances/std",
  "pallet-staking/std",
  "pallet-session/std",
  "rtoken-balances/std",
  "rtoken-rate/std",
]
